--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,4 +18,13 @@
   	<servlet-name>register</servlet-name>
   	<url-pattern>/register</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>login</servlet-name>
+  	<servlet-class>servletPack.SignInServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>login</servlet-name>
+  	<url-pattern>/login</url-pattern>
+  </servlet-mapping>
 </web-app>
