--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,4 +27,31 @@
   	<servlet-name>login</servlet-name>
   	<url-pattern>/login</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>ajaxlogin</servlet-name>
+  	<servlet-class>servletPack.AjaxSignIn</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ajaxlogin</servlet-name>
+  	<url-pattern>/ajaxlogin</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>updateAddress</servlet-name>
+  	<servlet-class>servletPack.UpdateAddressServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>updateAddress</servlet-name>
+  	<url-pattern>/updateAddress</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>placeOrder</servlet-name>
+  	<servlet-class>servletPack.PlaceOrderServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>placeOrder</servlet-name>
+  	<url-pattern>/placeOrder</url-pattern>
+  </servlet-mapping>
 </web-app>
