--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -54,4 +54,9 @@
   	<servlet-name>placeOrder</servlet-name>
   	<url-pattern>/placeOrder</url-pattern>
   </servlet-mapping>
+  
+  <context-param>
+  	<param-name>admin123</param-name>
+  	<param-value>123admin</param-value>
+  </context-param>
 </web-app>
