--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -55,6 +55,15 @@
   	<url-pattern>/placeOrder</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+  	<servlet-name>addBook</servlet-name>
+  	<servlet-class>servletPack.AddBookServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>addBook</servlet-name>
+  	<url-pattern>/addBook</url-pattern>
+  </servlet-mapping>
+  
   <context-param>
   	<param-name>admin123</param-name>
   	<param-value>123admin</param-value>
