--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -73,6 +73,15 @@
   	<url-pattern>/cart</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+  	<servlet-name>removeCart</servlet-name>
+  	<servlet-class>servletPack.RemoveCartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>removeCart</servlet-name>
+  	<url-pattern>/removeCart</url-pattern>
+  </servlet-mapping>
+  
   <context-param>
   	<param-name>admin123</param-name>
   	<param-value>123admin</param-value>
